# algorithms

./: .gitignore  CMakeLists.txt  README.md
subject1_task14/:  README.md  CMakeLists.txt  main.cpp  readme.md  tst.in  tst.out
subject2_task19.1/: CMakeLists.txt  input.txt  main.cpp  readme.md
subject3_task42/: CMakeLists.txt  input.txt  main.cpp  readme.md
subject4_task10/: CMakeLists.txt  input.in  main.cpp  output.out  readme.md
subject5_task16/: input.txt  main.cpp  readme.md
subject6_task17/: CMakeLists.txt  main.cpp  output.txt  readme.md
