cmake_minimum_required(VERSION 3.3)
project(algorithms)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

add_subdirectory(subject1_task14)
add_subdirectory(subject2_task19.1)
add_subdirectory(subject3_task42)
add_subdirectory(subject4_task10)
add_subdirectory(subject5_task16)
add_subdirectory(subject6_task17)